--- a/Actividad8.ipynb
+++ b/Actividad8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMY/B/TYpOr4yIJUgNenlr",
+      "authorship_tag": "ABX9TyMSpmdLr2/nvaqdU/sPxbl0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,17 +48,16 @@
         "Iniciamos el tema definiendo la forma general de una [ecuación difererencial ordinaria](https://en.wikipedia.org/wiki/Ordinary_differential_equation), definida por un polinomio de una combinación de derivadas de distinto orden de una función $y(t)$\n",
         "\n",
         "\\begin{equation*} \n",
-        "a_0(t) y + a_1(t) y^{\\prime} + \n",
-        "a_2(t) y^{\\prime\\prime} + \\cdots + \n",
+        "a_0(t) y + a_1(t) y' + \n",
+        "a_2(t) y'' + \\cdots + \n",
         "a_n(t) y^{(n)} + b(t) = 0\n",
         "\\end{equation*}\n",
         "\n",
         "donde $a_0(t), a_1(t), a_2 (t), \\ldots , a_n(t)$ y $b(t)$ son funciones diferenciables arbitrarias no necesariamente lineales y \n",
-        "$y^{\\prime}, y^{\\prime\\prime}, \\ldots, y^{n}$ son las derivadas consecutivas de la función desconocida $y(t)$.\n",
+        "$y', y'', \\ldots, y^{n}$ son las derivadas consecutivas de la función desconocida $y(t)$.\n",
         "\n",
         "No todas las ecuaciones diferenciales pueden ser resueltas de forma analítica, por lo que se recurre a buscar las soluciones de forma numérica. \n",
-        "\n",
-        "  \n"
+        "\n"
       ]
     },
     {
@@ -73,19 +72,19 @@
         "La ecuación diferencial\n",
         "\n",
         "\\begin{eqnarray*}\n",
-        "a_0 y(t) + a_1(t) y^{\\prime} + \n",
-        "a_2(t) y^{\\prime\\prime} + \\cdots + \n",
+        "a_0 y(t) + a_1(t) y' + \n",
+        "a_2(t) y'' + \\cdots + \n",
         "a_{k-1}(t) y^{k-1} & = & y^{k} \\\\\n",
-        "F(t, y, y^{\\prime}, y^{\\prime\\prime}, \n",
+        "F(t, y, y', y'', \n",
         "\\ldots , y^{k-1}) & = & y^{k}\n",
         "\\end{eqnarray*}\n",
         "\n",
         "se puede reescribir, definiendo $y_1, y_2, \\ldots, y_{k-1}$ funciones dependientes de $t$\n",
         "\n",
         "\\begin{eqnarray*}\n",
-        "y_1^{\\prime} & = & y_2 \\\\\n",
-        "y_2^{\\prime} & = & y_3 \\\\\n",
-        "y_3^{\\prime} & = & y_4 \\\\\n",
+        "y_1' & = & y_2 \\\\\n",
+        "y_2' & = & y_3 \\\\\n",
+        "y_3' & = & y_4 \\\\\n",
         "\\vdots &  & \\vdots \\\\\n",
         "y_{k-1}^{\\prime} & = & y_k \\\\\n",
         "y_k^{\\prime} & = & F(t, y_1, y_2, \\ldots , y_k)\n",
@@ -95,8 +94,7 @@
         "\n",
         "\\begin{equation*}\n",
         "\\vec{y}_k^{\\prime} = \\vec{F}(t, \\vec{y})\n",
-        "\\end{equation*}\n",
-        "\n"
+        "\\end{equation*}\n"
       ]
     },
     {
