--- a/Actividad9.ipynb
+++ b/Actividad9.ipynb
@@ -6,7 +6,7 @@
       "name": "Actividad9.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOW9xwr0jWGvuYRbUt7Caz7",
+      "authorship_tag": "ABX9TyMFuetVMhK6u6DiUTVevCVa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,10 +44,10 @@
         "Si $n=1$, la solución de la ecuación diferencial es \n",
         "\n",
         "\\begin{equation*}\n",
-        "\\vec{x}(t) = x_0 \\exp{At}\n",
+        "\\vec{x}(t) = x_0 \\exp{(At)}\n",
         "\\end{equation*}\n",
         "\n",
-        "Si $n > 1$, la solución también tendrá la forma, pero $A$ siendo una matriz. \n",
+        "Si $n > 1$, la solución también tendrá la misma forma, pero con $A$ siendo una matriz. \n",
         "\n",
         "Podemos definir la exponencial de una matriz cuadrada constante A de dimensiones $n \\times n$\n",
         "\n",
@@ -57,9 +57,9 @@
         "\n",
         "Esto es similar al desarrollo en Serie de Taylor de $\\exp(x)$, alrededor de $x_0=0$.\n",
         "\n",
-        "Vimos en el tema de Álgebra Lineal, que si la matriz es diagonalizable (todos sus eigenvalores son distintos), entonces existe una matriz $P$ formada por los eigenvectores de $A$, tal que $A=P \\Lambda P^{-1}$, y $\\Lambda$ es la matriz diagonal formada por los $n$ eigenvalores $(\\lambda_1, \\lambda_2, \\ldots, \\lambda_n)$. \n",
+        "Vimos en el tema de Álgebra Lineal, que si la matriz es diagonalizable (todos sus eigenvalores son distintos), entonces existe una matriz $P$ formada por los eigenvectores de $A$, tal que $A=P \\Lambda P^{-1}$, donde $\\Lambda$ es la matriz diagonal formada por los $n$ eigenvalores $(\\lambda_1, \\lambda_2, \\ldots, \\lambda_n)$. \n",
         "\n",
-        "También vimos que el cálculo de potencias de la matriz $A$ se simplificaba computacionalmente\n",
+        "También vimos que el cálculo de potencias de la matriz $A$ se simplificaban computacionalmente\n",
         "\n",
         "\\begin{equation*}\n",
         "A^k = P \\Lambda^k P^{-1}\n",
@@ -68,34 +68,34 @@
         "Si podemos diagonalizar la matriz $A$ ($n$ eigenvalores distintos), y $P = [ x_1 x_2  \\ldots  x_n ]$ es un eigenvector de $A$, tendremos\n",
         "\n",
         "\\begin{equation*}\n",
-        "A = [x_1 x_2 \\ldots x_n] \\begin{bmatrix}\n",
+        "A = [x_1 x_2 \\ldots x_n] \\ \\begin{bmatrix}\n",
         "\\lambda_1 & 0 & \\cdots & 0 \\\\\n",
         "0 & \\lambda_2 & \\cdots & 0 \\\\\n",
         "\\vdots & \\vdots &      & \\vdots \\\\\n",
         "0 & 0 & \\cdots & \\lambda_n \\\\\n",
-        "\\end{bmatrix} [x_1 x_2 \\ldots x_n]^{-1}   \n",
+        "\\end{bmatrix} \\ [x_1 x_2 \\ldots x_n]^{-1}   \n",
         "\\end{equation*}\n",
         "\n",
         "por lo que entonces se tiene que \n",
         "\n",
         "\\begin{equation*}\n",
-        "At = [x_1 x_2 \\ldots x_n] \\begin{bmatrix}\n",
+        "At = [x_1 x_2 \\ldots x_n] \\ \\begin{bmatrix}\n",
         "\\lambda_1 t & 0 & \\cdots & 0 \\\\\n",
         "0 & \\lambda_2 t & \\cdots & 0 \\\\\n",
         "\\vdots & \\vdots &      & \\vdots \\\\\n",
         "0 & 0 & \\cdots & \\lambda_n t \\\\\n",
-        "\\end{bmatrix} [x_1 x_2 \\ldots x_n]^{-1}   \n",
+        "\\end{bmatrix} \\ [x_1 x_2 \\ldots x_n]^{-1}   \n",
         "\\end{equation*}\n",
         "\n",
         "y calculando la exponencial de $\\exp(At)$ sería equivalente a calcular\n",
         "\n",
         "\\begin{equation*}\n",
-        "\\exp(At) = [x_1 x_2 \\ldots x_n] \\begin{bmatrix}\n",
+        "\\exp(At) = [x_1 x_2 \\ldots x_n] \\ \\begin{bmatrix}\n",
         "\\exp(\\lambda_1 t) & 0 & \\cdots & 0 \\\\\n",
         "0 & \\exp(\\lambda_2 t) & \\cdots & 0 \\\\\n",
         "\\vdots & \\vdots &      & \\vdots \\\\\n",
         "0 & 0 & \\cdots & \\exp(\\lambda_n t) \\\\\n",
-        "\\end{bmatrix} [x_1 x_2 \\ldots x_n]^{-1}   \n",
+        "\\end{bmatrix} \\ [x_1 x_2 \\ldots x_n]^{-1}   \n",
         "\\end{equation*}\n",
         "\n",
         "Es fácil ver el comportamento de la solución cuando  $\\lim t \\rightarrow  \\infty$, lo determinan las exponenciales de los eigenvalores. \n"
