--- a/Actividad9.ipynb
+++ b/Actividad9.ipynb
@@ -6,7 +6,7 @@
       "name": "Actividad9.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMQ7TTz9C40usOhR1YnOa84",
+      "authorship_tag": "ABX9TyO66fISZsO7r75QRc9802Fp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1366,7 +1366,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eLhc6-aPnUFp",
-        "outputId": "ffeb5b29-8059-4827-8f78-7e1a70e9bb6d"
+        "outputId": "c69cab8e-04b7-4554-d935-6d1d9439db3f"
       },
       "source": [
         "import numpy as np\n",
@@ -1399,7 +1399,7 @@
         "print('Eigenvectores:', eigvecs)\n",
         "\n"
       ],
-      "execution_count": 89,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1426,7 +1426,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o_onvHufu8si",
-        "outputId": "42a04a3a-b342-45fe-e243-827ee7666414"
+        "outputId": "b2a45671-7994-4cd1-fc06-16588bee254a"
       },
       "source": [
         "# Solución\n",
@@ -1447,7 +1447,7 @@
         "print('v2=',v2)\n",
         "print('v3=',v3)\n"
       ],
-      "execution_count": 90,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1474,7 +1474,7 @@
           "height": 58
         },
         "id": "GLn14ZT17FxW",
-        "outputId": "0800a0a1-9358-40d6-d224-8d071c7676f9"
+        "outputId": "200c3658-bf8a-4e84-b24f-e56406933035"
       },
       "source": [
         "# La solución del sistema \n",
@@ -1486,7 +1486,7 @@
         "X, infodict = integrate.odeint(dX_dt, X0, t, full_output=True)\n",
         "infodict['message'] \n"
       ],
-      "execution_count": 101,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1501,7 +1501,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 6
         }
       ]
     },
@@ -1513,7 +1513,7 @@
           "height": 388
         },
         "id": "w95ezOKT7jZi",
-        "outputId": "ab5bfd54-8fd7-4b40-a6a7-fd6e1f22093e"
+        "outputId": "8b9556b5-ecbb-45d3-b11d-b64148a3c238"
       },
       "source": [
         "x, y, z = X.T\n",
@@ -1531,7 +1531,7 @@
         "plt.title('Soluciones x(t), y(t), z(t)');\n",
         "plt.show();\n"
       ],
-      "execution_count": 102,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1567,7 +1567,7 @@
           "height": 316
         },
         "id": "PZsskmX5B2a7",
-        "outputId": "5ed559e8-f790-4063-bfed-f74063ced1c5"
+        "outputId": "964a3787-dbb5-4fce-b456-bd3804111932"
       },
       "source": [
         "# Solución en el plano fase\n",
@@ -1582,7 +1582,7 @@
         "plt.show()\n",
         " "
       ],
-      "execution_count": 105,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1607,7 +1607,7 @@
           "height": 316
         },
         "id": "HvUUeW7qCREW",
-        "outputId": "e5f8e840-f74c-43c9-bfd2-cc62469e8e93"
+        "outputId": "6f51212a-5522-40b8-bbb9-770b481d214d"
       },
       "source": [
         "plt.plot(x, z, 'brown')\n",
@@ -1619,7 +1619,7 @@
         "plt.title('Solución X(t) en el plano fase xz')\n",
         "plt.show()\n"
       ],
-      "execution_count": 111,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1644,7 +1644,7 @@
           "height": 316
         },
         "id": "0fLxkI4NCavO",
-        "outputId": "6c0b0b7a-a636-41e4-d6aa-7eb5e8f2cd43"
+        "outputId": "bb8bf8ed-5318-4353-f4d0-7f4a20fe0040"
       },
       "source": [
         "plt.plot(y, z, 'brown')\n",
@@ -1654,9 +1654,9 @@
         "plt.ylim(-10, 10)\n",
         "plt.xlim(-10, 10)\n",
         "plt.title('Solución X(t) en el plano fase yz')\n",
-        "plt.show()"
+        "plt.show()\n"
       ],
-      "execution_count": 109,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1681,7 +1681,7 @@
           "height": 268
         },
         "id": "ISBkMqBP_HuB",
-        "outputId": "7122b0ba-eee5-42b0-bf15-7171ad944fb1"
+        "outputId": "b4018f8e-6c8a-4cbd-faf4-bab1ae8764bb"
       },
       "source": [
         "# Solución en el plano fase\n",
@@ -1711,7 +1711,7 @@
         "ax.set_title('Solución en el espacio fase (x(t),y(t),z(t))')\n",
         "plt.show()\n"
       ],
-      "execution_count": 104,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1772,6 +1772,11 @@
         "# Xsol' = Xsol\n",
         "# Ysol' = Xsol + 2*Ysol\n",
         "# Zsol' = Xsol - Ysol\n",
+        "# Xsol'' = Xsol'\n",
+        "# Ysol'' = Xsol' + 2*Ysol'\n",
+        "# Zsol'' = Xsol' - Ysol'\n",
+        "\n",
+        "\n",
         "\n",
         "# Aplicamos las condiciones iniciales\n",
         "# Xsol(0) = c11*b11 + c12*b12 + c13*b13 = 1\n",
@@ -1786,6 +1791,12 @@
         "# Zsol'(0) = Xsol(0) - Ysol(0) = 1\n",
         "#          = lambda1*c31*v1[2]+lambda2*c32*v2[2]+lambda3*c33*v3[2]\n",
         "#          = lambda1*b31*c31+lambda2*b32*c32+lambda3*b33*c33\n",
+        "# Xsol''(0) = Xsol'(0) = 1\n",
+        "#           = lambda1^2 b11*c11 + lambda2^2 b12*c12 + lambda3^2 b13*c13\n",
+        "# Ysol''(0) = Xsol'(0) + 2*Ysol'(0) = 3 \n",
+        "#           = lambda1^2 b21*c21+lambda2^2 b22*c22+lambda3^2 b23*c23\n",
+        "# Zsol''(0) = Xsol'(0) - Ysol'(0) = 0\n",
+        "#           = lambda1^2 b31*c31+lambda2^2 b32*c32+lambda3^2 b33*c33\n",
         "\n",
         "b11 = v1[0]\n",
         "b12 = v2[0]\n",
@@ -1797,7 +1808,7 @@
         "b32 = v2[2]\n",
         "b33 = v3[2]\n"
       ],
-      "execution_count": 114,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1805,24 +1816,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 551
+          "height": 603
         },
         "id": "1-W8qiXtGCWy",
-        "outputId": "c315c897-2105-4d05-ce57-3e133bcc93b7"
+        "outputId": "27e59397-0876-46e2-eadc-cce7eeb4c1c0"
       },
       "source": [
         "# Pendiente .....\n",
         "\n",
         "# Buscaremos los valores de c1,c2 y c3 que satisfacen las condiciones iniciales\n",
-        "# B1 [c11,c12,c13]^T = [1,1]^T\n",
-        "# [c11,c12,c13]^T = B1^{-1} [1,1]^T\n",
-        "# B2 [c21,c22,c23]^T = [0,1]^T\n",
-        "# [c21,c22,c23]^T = B2^{-1}[0,1]^T\n",
-        "# B3 [c31,c32,c33]^T = [0,1]^T\n",
-        "# [c31,c32,c33]^T = B3^{-1}[0,1]^T\n",
-        "B1 = np.array([[ b11, b12, b13], [ lambda1*b11, lambda2*b12, lambda3*b13]])\n",
-        "B2 = np.array([[ b21, b22, b23], [ lambda1*b21, lambda2*b22, lambda3*b23]])               \n",
-        "B3 = np.array([[ b31, b32, b33], [ lambda1*b31, lambda2*b32, lambda3*b33]])               \n",
+        "# B1 [c11,c12,c13]^T = [1,1,1]^T\n",
+        "# [c11,c12,c13]^T = B1^{-1} [1,1,1]^T\n",
+        "# B2 [c21,c22,c23]^T = [0,1,3]^T\n",
+        "# [c21,c22,c23]^T = B2^{-1}[0,1,3]^T\n",
+        "# B3 [c31,c32,c33]^T = [0,1,0]^T\n",
+        "# [c31,c32,c33]^T = B3^{-1}[0,1,0]^T\n",
+        "B1 = np.array([[b11, b12, b13], [lambda1*b11, lambda2*b12, lambda3*b13],\n",
+        "               [(lambda1**2)*b11, (lambda2**2)*b12, (lambda3**2)*b13]])\n",
+        "B2 = np.array([[b21, b22, b23], [lambda1*b21, lambda2*b22, lambda3*b23],\n",
+        "               [(lambda1*+2)*b21, (lambda2**2)*b22, (lambda3**3)*b23]])               \n",
+        "B3 = np.array([[b31, b32, b33], [lambda1*b31, lambda2*b32, lambda3*b33],\n",
+        "               [(lambda1**2)*b31, (lambda2**2)*b32, (lambda3**2)*b33]])               \n",
         "\n",
         "print('B1=', B1)\n",
         "print(' ')\n",
@@ -1858,33 +1872,36 @@
         "\n",
         "#print('Condiciones iniciales: x(0),y(0),z(0): (1,0,0)', x1, x2, x3 )\n"
       ],
-      "execution_count": 126,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "B1= [[11.66135546+0.j -0.7702814 +0.j  0.66666667+0.j]\n",
-            " [30.52982496+0.j -0.29422131+0.j  0.66666667+0.j]]\n",
+            "B1= [[ 0.        +0.j  0.        +0.j  0.66666667+0.j]\n",
+            " [-0.        +0.j  0.        +0.j  0.66666667+0.j]\n",
+            " [ 0.        +0.j  0.        +0.j  0.66666667+0.j]]\n",
             " \n",
-            "B2= [[ 7.20711403+0.j  1.24634148+0.j -0.66666667+0.j]\n",
-            " [18.86846949+0.j  0.47606008+0.j -0.66666667+0.j]]\n",
+            "B2= [[ 0.        +0.j  1.        +0.j -0.66666667+0.j]\n",
+            " [-0.        +0.j  2.        +0.j -0.66666667+0.j]\n",
+            " [-0.        +0.j  4.        +0.j -0.66666667+0.j]]\n",
             " \n",
-            "B3= [[1.        +0.j 0.        +0.j 0.33333333+0.j]\n",
-            " [2.61803399+0.j 0.        +0.j 0.33333333+0.j]]\n",
+            "B3= [[ 1.        +0.j  0.        +0.j  0.33333333+0.j]\n",
+            " [-1.        +0.j  0.        +0.j  0.33333333+0.j]\n",
+            " [ 1.        +0.j  0.        +0.j  0.33333333+0.j]]\n",
             " \n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "error",
-          "ename": "ValueError",
+          "ename": "LinAlgError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-126-a87d8d7c3ae9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mB1_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0mB2_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mB3_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/scipy/linalg/basic.py\u001b[0m in \u001b[0;36minv\u001b[0;34m(a, overwrite_a, check_finite)\u001b[0m\n\u001b[1;32m    950\u001b[0m     \u001b[0ma1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_asarray_validated\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck_finite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcheck_finite\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    951\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 952\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'expected square matrix'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    953\u001b[0m     \u001b[0moverwrite_a\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moverwrite_a\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0m_datacopied\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    954\u001b[0m     \u001b[0;31m# XXX: I found no advantage or disadvantage of using finv.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: expected square matrix"
+            "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-13-e1cfbe4c48e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mB1_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0mB2_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mB3_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/scipy/linalg/basic.py\u001b[0m in \u001b[0;36minv\u001b[0;34m(a, overwrite_a, check_finite)\u001b[0m\n\u001b[1;32m    977\u001b[0m         \u001b[0minv_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpiv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlwork\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlwork\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite_lu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    978\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 979\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mLinAlgError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"singular matrix\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    980\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    981\u001b[0m         raise ValueError('illegal value in %d-th argument of internal '\n",
+            "\u001b[0;31mLinAlgError\u001b[0m: singular matrix"
           ]
         }
       ]
