--- a/Actividad9.ipynb
+++ b/Actividad9.ipynb
@@ -6,7 +6,7 @@
       "name": "Actividad9.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO66fISZsO7r75QRc9802Fp",
+      "authorship_tag": "ABX9TyM98gB6930hXU1yd7F4tjNE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -926,7 +926,7 @@
         "print('Eigenvectores:', eigvecs)\n",
         "\n"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -968,7 +968,7 @@
         "print('v1=',v1)\n",
         "print('v2=',v2)\n"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1004,7 +1004,7 @@
         "X, infodict = integrate.odeint(dX_dt, X0, t, full_output=True)\n",
         "infodict['message'] \n"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
         "plt.title('Soluciones x(t), y(t)');\n",
         "plt.show();\n"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1099,7 +1099,7 @@
         "plt.show()\n",
         " "
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1127,7 +1127,9 @@
         "\\begin{equation*}\n",
         "X(t) = c_1 \\exp(\\lambda_1 t) \\vec{v_1} + \n",
         "c_2 \\exp(\\lambda_2 t) \\vec{v_2}\n",
-        "\\end{equation*}\n"
+        "\\end{equation*}\n",
+        "\n",
+        "**NOTA:** Haré la suposición de que $c_1$ y $c_2$, tienen componentes ($c_{11},c_{12}, c_{21}, c_{22}$). Veremos que no era necesario, pues $c_{11}=c_{21}$ y $c_{12}=c_{22}$.\n"
       ]
     },
     {
@@ -1163,7 +1165,7 @@
         "b21 = np.exp(lambda1)*v1[1]\n",
         "b22 = np.exp(lambda2)*v2[1]\n"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1178,8 +1180,9 @@
       "source": [
         "# Buscamos los valores de c1 y c2 que satisfacen las condiciones iniciales\n",
         "# B1 [c11,c12]^T = [1,3]^T\n",
+        "# [c11,c12]^T = B1^{-1} [1,3^T]\n",
         "# B2 [c21,c22]^T = [1,2]^T\n",
-        "# \n",
+        "# [c21,c22]^T = B2^{-1}[1,2]^T\n",
         "B1 = np.array([[b11,b12], [lambda1*b11,lambda2*b12]])\n",
         "B2 = np.array([[b21,b22] ,[lambda1*b21,lambda2*b22]])\n",
         "print('B1=', B1)\n",
@@ -1215,7 +1218,7 @@
         "x2=c_21*np.exp(lambda1)*v1[1]+c_22*np.exp(lambda2)*v2[1]\n",
         "print('Condiciones iniciales: x(1), y(1):', x1, x2)\n"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1255,7 +1258,7 @@
       "source": [
         ""
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1284,7 +1287,7 @@
         "plt.title('Soluciones x(t), y(t)');\n",
         "plt.show();\n"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,8 +1337,8 @@
         "\n",
         "\\begin{eqnarray*}\n",
         "x_1' & = & x_1 \\\\\n",
-        "x_1' & = & x_1 + 2 x_2 \\\\\n",
-        "x_3' & = & x_1 - x_2 \\\\\n",
+        "x_2' & = & x_1 + 2 x_2 \\\\\n",
+        "x_3' & = & x_1 - x_3 \\\\\n",
         "\\end{eqnarray*}\n",
         "\n",
         "con condiciones iniciales $\\vec{X}(0)=(1,0,0)$.\n",
@@ -1345,7 +1348,7 @@
         "\\begin{equation*}\n",
         "\\vec{X'} = \\begin{bmatrix} 1 & 0 & 0 \\\\\n",
         "1 & 2 & 0 \\\\\n",
-        "1 & 0 & -1 \\\\ \\end{bmatrix} \\vec{X} =\n",
+        "1 &  0 & -1\\\\ \\end{bmatrix} \\vec{X} =\n",
         "A \\vec{X}\n",
         "\\end{equation*}\n",
         "\n",
@@ -1366,7 +1369,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eLhc6-aPnUFp",
-        "outputId": "c69cab8e-04b7-4554-d935-6d1d9439db3f"
+        "outputId": "e9e68208-def1-4aa2-9190-6249421348d0"
       },
       "source": [
         "import numpy as np\n",
@@ -1399,7 +1402,7 @@
         "print('Eigenvectores:', eigvecs)\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1426,7 +1429,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o_onvHufu8si",
-        "outputId": "b2a45671-7994-4cd1-fc06-16588bee254a"
+        "outputId": "54cbaf0c-3860-4f8d-bcf3-546049267fd9"
       },
       "source": [
         "# Solución\n",
@@ -1447,7 +1450,7 @@
         "print('v2=',v2)\n",
         "print('v3=',v3)\n"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1486,7 +1489,7 @@
         "X, infodict = integrate.odeint(dX_dt, X0, t, full_output=True)\n",
         "infodict['message'] \n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1531,7 +1534,7 @@
         "plt.title('Soluciones x(t), y(t), z(t)');\n",
         "plt.show();\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1582,7 +1585,7 @@
         "plt.show()\n",
         " "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1619,7 +1622,7 @@
         "plt.title('Solución X(t) en el plano fase xz')\n",
         "plt.show()\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1656,7 +1659,7 @@
         "plt.title('Solución X(t) en el plano fase yz')\n",
         "plt.show()\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1711,7 +1714,7 @@
         "ax.set_title('Solución en el espacio fase (x(t),y(t),z(t))')\n",
         "plt.show()\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1808,7 +1811,7 @@
         "b32 = v2[2]\n",
         "b33 = v3[2]\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1872,7 +1875,7 @@
         "\n",
         "#print('Condiciones iniciales: x(0),y(0),z(0): (1,0,0)', x1, x2, x3 )\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
