--- a/Actividad9.ipynb
+++ b/Actividad9.ipynb
@@ -6,7 +6,7 @@
       "name": "Actividad9.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM98gB6930hXU1yd7F4tjNE",
+      "authorship_tag": "ABX9TyNI5EOV+MQXnD/FzmQ+WtH4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1369,7 +1369,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eLhc6-aPnUFp",
-        "outputId": "e9e68208-def1-4aa2-9190-6249421348d0"
+        "outputId": "4f65c65d-f4a6-47de-8bfe-9032a7f903cc"
       },
       "source": [
         "import numpy as np\n",
@@ -1402,7 +1402,7 @@
         "print('Eigenvectores:', eigvecs)\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1429,7 +1429,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o_onvHufu8si",
-        "outputId": "54cbaf0c-3860-4f8d-bcf3-546049267fd9"
+        "outputId": "3cf12ab9-56be-472c-b7ea-8d4b6ef7d2cc"
       },
       "source": [
         "# Solución\n",
@@ -1450,7 +1450,7 @@
         "print('v2=',v2)\n",
         "print('v3=',v3)\n"
       ],
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1477,7 +1477,7 @@
           "height": 58
         },
         "id": "GLn14ZT17FxW",
-        "outputId": "200c3658-bf8a-4e84-b24f-e56406933035"
+        "outputId": "8c4da467-5afb-41b0-9706-3f07dceedfed"
       },
       "source": [
         "# La solución del sistema \n",
@@ -1489,7 +1489,7 @@
         "X, infodict = integrate.odeint(dX_dt, X0, t, full_output=True)\n",
         "infodict['message'] \n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1504,7 +1504,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -1516,7 +1516,7 @@
           "height": 388
         },
         "id": "w95ezOKT7jZi",
-        "outputId": "8b9556b5-ecbb-45d3-b11d-b64148a3c238"
+        "outputId": "5e75f9a0-c3b4-400e-a324-051177f9ce71"
       },
       "source": [
         "x, y, z = X.T\n",
@@ -1534,7 +1534,7 @@
         "plt.title('Soluciones x(t), y(t), z(t)');\n",
         "plt.show();\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1570,7 +1570,7 @@
           "height": 316
         },
         "id": "PZsskmX5B2a7",
-        "outputId": "964a3787-dbb5-4fce-b456-bd3804111932"
+        "outputId": "3e405c1e-e5d2-4ebd-da98-73c2b19e5c24"
       },
       "source": [
         "# Solución en el plano fase\n",
@@ -1585,7 +1585,7 @@
         "plt.show()\n",
         " "
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1610,7 +1610,7 @@
           "height": 316
         },
         "id": "HvUUeW7qCREW",
-        "outputId": "6f51212a-5522-40b8-bbb9-770b481d214d"
+        "outputId": "82bd3d32-52ae-4b6a-936a-cb2580513e39"
       },
       "source": [
         "plt.plot(x, z, 'brown')\n",
@@ -1622,7 +1622,7 @@
         "plt.title('Solución X(t) en el plano fase xz')\n",
         "plt.show()\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1647,7 +1647,7 @@
           "height": 316
         },
         "id": "0fLxkI4NCavO",
-        "outputId": "bb8bf8ed-5318-4353-f4d0-7f4a20fe0040"
+        "outputId": "6b996c48-1eff-429c-8959-43a27937494d"
       },
       "source": [
         "plt.plot(y, z, 'brown')\n",
@@ -1659,7 +1659,7 @@
         "plt.title('Solución X(t) en el plano fase yz')\n",
         "plt.show()\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1684,7 +1684,7 @@
           "height": 268
         },
         "id": "ISBkMqBP_HuB",
-        "outputId": "b4018f8e-6c8a-4cbd-faf4-bab1ae8764bb"
+        "outputId": "10b299da-26fc-4acb-e2e1-4a39d615d09e"
       },
       "source": [
         "# Solución en el plano fase\n",
@@ -1714,7 +1714,7 @@
         "ax.set_title('Solución en el espacio fase (x(t),y(t),z(t))')\n",
         "plt.show()\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1763,43 +1763,20 @@
         "id": "SaKeMhTRALZp"
       },
       "source": [
-        "# En proceso........(pendiente)\n",
-        "# Necesitamos 9 ecuaciones \n",
         "\n",
         "# Solución del sistema\n",
         "t = np.linspace(0, 3,  300)              # Rango de tiempo de integración\n",
         "\n",
-        "# Xsol=c11*np.exp(lambda1*t)*v1[0]+c12*np.exp(lambda2*t)*v2[0]+c13*np.exp(lambda3*t)*v3[0]\n",
-        "# Ysol=c21*np.exp(lambda1*t)*v1[1]+c22*np.exp(lambda2*t)*v2[1]+c23*np.exp(lambda3*t)*v3[1]\n",
-        "# Zsol=c31*np.exp(lambda1*t)*v1[2]+c32*np.exp(lambda2*t)*v2[2]+c33*np.exp(lambda3*t)*v3[2]\n",
-        "# Xsol' = Xsol\n",
-        "# Ysol' = Xsol + 2*Ysol\n",
-        "# Zsol' = Xsol - Ysol\n",
-        "# Xsol'' = Xsol'\n",
-        "# Ysol'' = Xsol' + 2*Ysol'\n",
-        "# Zsol'' = Xsol' - Ysol'\n",
-        "\n",
+        "# Xsol=c1*np.exp(lambda1*t)*v1[0]+c2*np.exp(lambda2*t)*v2[0]+c3*np.exp(lambda3*t)*v3[0]\n",
+        "# Ysol=c1*np.exp(lambda1*t)*v1[1]+c2*np.exp(lambda2*t)*v2[1]+c3*np.exp(lambda3*t)*v3[1]\n",
+        "# Zsol=c1*np.exp(lambda1*t)*v1[2]+c2*np.exp(lambda2*t)*v2[2]+c3*np.exp(lambda3*t)*v3[2]\n",
         "\n",
         "\n",
         "# Aplicamos las condiciones iniciales\n",
-        "# Xsol(0) = c11*b11 + c12*b12 + c13*b13 = 1\n",
-        "# Ysol(0) = c21*b21 + c22*b22 + c23*b23 = 0\n",
-        "# Zsol(0) = c31*b31 + c32*b32 + c33*b33 = 0\n",
-        "# Xsol'(0) = Xsol(0) = 1\n",
-        "#          = lambda1*c11*v1[0]+lambda2*c12*v2[0]+lambda3*c13*v3[0]\n",
-        "#          = lambda1*b11*c11+lambda2*b12*c12+lambda3*b13*c13\n",
-        "# Ysol'(0) = Xsol(0) + 2*Ysol(0) = 1\n",
-        "#          = lambda1*c21*v1[1]+lambda2*c22*v2[1]+lambda3*c23*v3[1]\n",
-        "#          = lambda1*b21*c21+lambda2*b22*c22+lambda3*b23*c23\n",
-        "# Zsol'(0) = Xsol(0) - Ysol(0) = 1\n",
-        "#          = lambda1*c31*v1[2]+lambda2*c32*v2[2]+lambda3*c33*v3[2]\n",
-        "#          = lambda1*b31*c31+lambda2*b32*c32+lambda3*b33*c33\n",
-        "# Xsol''(0) = Xsol'(0) = 1\n",
-        "#           = lambda1^2 b11*c11 + lambda2^2 b12*c12 + lambda3^2 b13*c13\n",
-        "# Ysol''(0) = Xsol'(0) + 2*Ysol'(0) = 3 \n",
-        "#           = lambda1^2 b21*c21+lambda2^2 b22*c22+lambda3^2 b23*c23\n",
-        "# Zsol''(0) = Xsol'(0) - Ysol'(0) = 0\n",
-        "#           = lambda1^2 b31*c31+lambda2^2 b32*c32+lambda3^2 b33*c33\n",
+        "# Xsol(0) = c1*b11 + c2*b12 + c3*b13 = 1\n",
+        "# Ysol(0) = c1*b21 + c2*b22 + c3*b23 = 0\n",
+        "# Zsol(0) = c1*b31 + c2*b32 + c3*b33 = 0\n",
+        "\n",
         "\n",
         "b11 = v1[0]\n",
         "b12 = v2[0]\n",
@@ -1811,101 +1788,85 @@
         "b32 = v2[2]\n",
         "b33 = v3[2]\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 603
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1-W8qiXtGCWy",
-        "outputId": "27e59397-0876-46e2-eadc-cce7eeb4c1c0"
+        "outputId": "5c29d09f-4163-4cc6-ec71-d8cc13abc1c2"
       },
       "source": [
-        "# Pendiente .....\n",
         "\n",
         "# Buscaremos los valores de c1,c2 y c3 que satisfacen las condiciones iniciales\n",
-        "# B1 [c11,c12,c13]^T = [1,1,1]^T\n",
-        "# [c11,c12,c13]^T = B1^{-1} [1,1,1]^T\n",
-        "# B2 [c21,c22,c23]^T = [0,1,3]^T\n",
-        "# [c21,c22,c23]^T = B2^{-1}[0,1,3]^T\n",
-        "# B3 [c31,c32,c33]^T = [0,1,0]^T\n",
-        "# [c31,c32,c33]^T = B3^{-1}[0,1,0]^T\n",
-        "B1 = np.array([[b11, b12, b13], [lambda1*b11, lambda2*b12, lambda3*b13],\n",
-        "               [(lambda1**2)*b11, (lambda2**2)*b12, (lambda3**2)*b13]])\n",
-        "B2 = np.array([[b21, b22, b23], [lambda1*b21, lambda2*b22, lambda3*b23],\n",
-        "               [(lambda1*+2)*b21, (lambda2**2)*b22, (lambda3**3)*b23]])               \n",
-        "B3 = np.array([[b31, b32, b33], [lambda1*b31, lambda2*b32, lambda3*b33],\n",
-        "               [(lambda1**2)*b31, (lambda2**2)*b32, (lambda3**2)*b33]])               \n",
+        "# B1 [c1,c2,c3]^T = [1,0,0]^T\n",
+        "# [c11,c12,c13]^T = B1^{-1} [1,0,0]^T\n",
+        "# B1 es la matriz de los eigenvectores en las columnas\n",
+        "B1 = np.array([[b11, b12, b13], [b21, b22, b23], [b31, b32, b33]])\n",
         "\n",
         "print('B1=', B1)\n",
         "print(' ')\n",
-        "print('B2=', B2)\n",
-        "print(' ')\n",
-        "print('B3=', B3)\n",
-        "print(' ')\n",
+        "\n",
         "\n",
         "B1_inv = linalg.inv(B1)\n",
-        "B2_inv = linalg.inv(B2)\n",
-        "B3_inv = linalg.inv(B3)\n",
+        "\n",
         "\n",
         "print('B1_inv = [[B1_inv[0][0], B1_inv[0][1]], B1_inv[0][2]')\n",
         "print('         [B1_inv[1][0], B1_inv[1][1]], B1_inv[1][2]')\n",
         "print('         [B1_inv[2][0], B1_inv[2][1]], B1_inv[2][2]]')\n",
         "print('B1_inv=', B1_inv)\n",
         "print(' ')\n",
-        "print('B2_inv = [[B2_inv[0][0], B2_inv[0][1]], B2_inv[0][2]')\n",
-        "print('         [B2_inv[1][0], B2_inv[1][1]], B2_inv[1][2]')\n",
-        "print('         [B2_inv[2][0], B2_inv[2][1]], B2_inv[2][2]]')\n",
-        "print('B2_inv=', B2_inv)\n",
-        "print(' ')\n",
-        "print('B3_inv = [[B3_inv[0][0], B3_inv[0][1]], B3_inv[0][2]')\n",
-        "print('         [B3_inv[1][0], B3_inv[1][1]], B3_inv[1][2]')\n",
-        "print('         [B3_inv[2][0], B3_inv[2][1]], B3_inv[2][2]]')\n",
-        "print('B3_inv=', B3_inv)\n",
         "\n",
+        "X0 = np.array([[1,0,0]])\n",
+        "\n",
+        "C = B1_inv@X0.T \n",
+        "\n",
+        "# Matriz de los coeficientes\n",
+        "C\n",
+        "\n",
+        "c_1 = C[0]\n",
+        "c_2 = C[1]\n",
+        "c_3 = C[2]\n",
+        "\n",
+        "print('Los coeficientes son:')\n",
+        "print('c_1=',c_1)\n",
+        "print('c_2=',c_2)\n",
+        "print('c_3=',c_3)\n",
         "\n",
         "# Satisface las condiciones iniciales?\n",
-        "#x1 = c_1*v1[0]+c_2*v2[0]+c_3*v3[0]\n",
-        "#x2 = c_1*v1[1]+c_2*v2[1]+c_3*v3[1]\n",
-        "#x3 = c_1*v1[2]+c_2*v2[2]+c_3*v3[2]\n",
+        "x1 = c_1*v1[0]+c_2*v2[0]+c_3*v3[0]\n",
+        "x2 = c_1*v1[1]+c_2*v2[1]+c_3*v3[1]\n",
+        "x3 = c_1*v1[2]+c_2*v2[2]+c_3*v3[2]\n",
         "\n",
-        "#print('Condiciones iniciales: x(0),y(0),z(0): (1,0,0)', x1, x2, x3 )\n"
+        "print('Condiciones iniciales: x(0),y(0),z(0): (1,0,0)', x1, x2, x3 )\n"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "B1= [[ 0.        +0.j  0.        +0.j  0.66666667+0.j]\n",
-            " [-0.        +0.j  0.        +0.j  0.66666667+0.j]\n",
-            " [ 0.        +0.j  0.        +0.j  0.66666667+0.j]]\n",
+            "B1= [[ 0.          0.          0.66666667]\n",
+            " [ 0.          1.         -0.66666667]\n",
+            " [ 1.          0.          0.33333333]]\n",
             " \n",
-            "B2= [[ 0.        +0.j  1.        +0.j -0.66666667+0.j]\n",
-            " [-0.        +0.j  2.        +0.j -0.66666667+0.j]\n",
-            " [-0.        +0.j  4.        +0.j -0.66666667+0.j]]\n",
+            "B1_inv = [[B1_inv[0][0], B1_inv[0][1]], B1_inv[0][2]\n",
+            "         [B1_inv[1][0], B1_inv[1][1]], B1_inv[1][2]\n",
+            "         [B1_inv[2][0], B1_inv[2][1]], B1_inv[2][2]]\n",
+            "B1_inv= [[-0.5 -0.   1. ]\n",
+            " [ 1.   1.   0. ]\n",
+            " [ 1.5  0.   0. ]]\n",
             " \n",
-            "B3= [[ 1.        +0.j  0.        +0.j  0.33333333+0.j]\n",
-            " [-1.        +0.j  0.        +0.j  0.33333333+0.j]\n",
-            " [ 1.        +0.j  0.        +0.j  0.33333333+0.j]]\n",
-            " \n"
+            "Los coeficientes son:\n",
+            "c_1= [-0.5]\n",
+            "c_2= [1.]\n",
+            "c_3= [1.5]\n",
+            "Condiciones iniciales: x(0),y(0),z(0): (1,0,0) [1.] [0.] [0.]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "LinAlgError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-e1cfbe4c48e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mB1_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0mB2_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mB3_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/scipy/linalg/basic.py\u001b[0m in \u001b[0;36minv\u001b[0;34m(a, overwrite_a, check_finite)\u001b[0m\n\u001b[1;32m    977\u001b[0m         \u001b[0minv_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpiv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlwork\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlwork\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite_lu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    978\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 979\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mLinAlgError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"singular matrix\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    980\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    981\u001b[0m         raise ValueError('illegal value in %d-th argument of internal '\n",
-            "\u001b[0;31mLinAlgError\u001b[0m: singular matrix"
-          ]
         }
       ]
     },
