--- a/Actividad10.ipynb
+++ b/Actividad10.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXELTCq1JfAce8xBnh6kgk",
+      "authorship_tag": "ABX9TyP5448uvzZUTEOR+VxIVDEw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,6 +153,7 @@
       },
       "source": [
         "# Solución de la Ecuación del Calor usando scipy.integrate.odeint\n",
+        "# Problema de Valor Inicial y Condiciones a la Frontera Tipo de Dirichlet\n",
         "\n",
         "import numpy as np\n",
         "from scipy.integrate import odeint\n",
@@ -164,7 +165,8 @@
         "    # Llenamos de ceros inicialmente\n",
         "    dudt = np.zeros(x0.shape)\n",
         "\n",
-        "    #Condiciones a la frontera u(0,t)=u(L,t)=0: Temperatura constante\n",
+        "    # Condiciones a la Frontera Tipo Dirichlet: Temperatura constante\n",
+        "    # Condiciones a la frontera u(0,t)=u(L,t)=0 \n",
         "    dudt[0] = 0\n",
         "    dudt[-1] = 0 # Equivale a evaluar en el último punto N\n",
         "\n",
@@ -195,11 +197,12 @@
         "\n",
         "# Los puntos en el dominio x\n",
         "x = np.linspace(a, b, N);\n",
+        "\n",
         "# La condición inicial u(x,0)=sin(pi*x)\n",
         "x0 = np.sin(np.pi*x)\n",
         "x0[x0 < 0] = 0\n",
         "\n",
-        "# Puntos de integración\n",
+        "# Puntos de integración en el tiempo\n",
         "tspan = np.linspace(t0, tf, 25);\n",
         "\n",
         "# Solución usando scipy.integrate.odeint\n",
@@ -245,10 +248,24 @@
         "\n",
         "Resuelva la Ecuación del calor, usando el método anterior para el siguiente caso:\n",
         "\n",
-        "Una barra metálica de longitud $L=10$, y coeficiente de difusión $\\kappa=0.5$.\n",
+        "**Caso a)** \n",
         "\n",
-        "Condición inicial: u(x,0) = 0\n",
-        "Condiciones a la frontera: u(0,t)=10, u(L,t)=0.\n"
+        "Una barra metálica de longitud $L=10$, y coeficiente de difusión $\\kappa=100$.\n",
+        "Condición inicial (Temperatura dentro de la barra): u(x,0) = 0.\n",
+        "\n",
+        "Condiciones a la frontera: u(0,t)=10, u(L,t)=0.\n",
+        "\n",
+        "Realice los cálculos hasta alcanzar el equilibrio térmico.\n",
+        "\n",
+        "**Caso b)** \n",
+        "\n",
+        "Un material de longitud $L=10$ con coeficiente de difusión térmica $\\kappa=0.25$\n",
+        "\n",
+        "Condición inicial u(x,0)=20.\n",
+        "\n",
+        "Condiciones a la frontera: u(0,t)=(20 + 10 sin(pi*t/12), u(L,t)=20.\n",
+        "\n",
+        "Realice los cálculos para t=(0,48)\n"
       ]
     },
     {
