--- a/Actividad10.ipynb
+++ b/Actividad10.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkTdCnH4waSU31U0AqbrJn",
+      "authorship_tag": "ABX9TyNnWzzyFPmAkxLH+KXXUiCs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -379,9 +379,10 @@
         "\\begin{eqnarray*}\n",
         "u_j^{new} & = & u_j + \\kappa \\frac{k}{h^2} \n",
         "\\left( u_{j+1} - 2 u_j + u_{j-1} \\right) \\\\\n",
-        "         & = & \\kappa r u_{j+1} + (1 -2\\kappa r) u_j + \\kappa r u_{j-1}\n",
+        "         & = & \\alpha u_{j+1} + (1 -2\\alpha) u_j + \\alpha u_{j-1}\n",
         "\\end{eqnarray*}\n",
         "\n",
+        "donde hemos definido $\\alpha = \\kappa k /h^2$.\n",
         "\n",
         "**NOTA IMPORTANTE:** El método de diferencias finitas anterior para resolver la Ecuación del Calor es **estable y convergente si y sólo si $r \\leq 1/2$**. "
       ]
