--- a/Actividad11.ipynb
+++ b/Actividad11.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad11.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMO0uh27eP52muHdvVn9HBc",
+      "authorship_tag": "ABX9TyMmdfoj/cZhA4AjCSLD1TI0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -944,7 +944,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 385
         },
-        "outputId": "0a0e44a7-3733-47e5-f2e2-e42ec6d1e238"
+        "outputId": "92ec08f4-8968-4d3c-d7ff-ae149ce861c5"
       },
       "source": [
         "#!python\n",
@@ -985,18 +985,26 @@
         "    # Define el tamaño del dominio y crea una malla discretizada.\n",
         "    L = 200.0\n",
         "    # Preferentemente N=potencia de 2^n (exigencia de la transformada rápida de Fourier FFT)\n",
-        "    N = 256\n",
-        "    dx = L / (N - 1.0) # dx < 0.8\n",
-        "    x = np.linspace(0, (1-1.0/N)*L, N) # L < N\n",
+        "    Nx = 256\n",
+        "\n",
+        "    dx = L / (Nx - 1.0) # dx < 0.8\n",
+        "    x = np.linspace(0, (1-1.0/Nx)*L, Nx) # L < N\n",
         "\n",
         "    # Definir las condiciones iniciales\n",
         "    # Dos solitones (ondas solitarias) viajando hacia la derecha en un dominio periódico\n",
-        "    u0 = kdv_exact(x-0.2*L, 0.76) + kdv_exact(x-0.4*L, 0.38)\n",
+        "    # Un soliton a la izquierda del otro. Posicionados en x-x01 y x-x02, \n",
+        "    # Con velocidades c1 > c2 que provocará que colisionen entre si (el primero alcance al segundo)\n",
+        "    x01 = 0.2*L\n",
+        "    x02 = 0.4*L\n",
+        "    c1= 0.76\n",
+        "    c2= 0.38\n",
+        "    u0 = kdv_exact(x-x01, c1) + kdv_exact(x-x02, c2)\n",
         "    \n",
         "    # Definir el tamaño del dominio en el tiempo\n",
         "    # Tiempo final T\n",
         "    T = 200\n",
-        "    t = np.linspace(0, T, 501)\n",
+        "    Nt = 501\n",
+        "    t = np.linspace(0, T, Nt)\n",
         "\n",
         "    print(\"Calculando la solución.\")\n",
         "    sol = kdv_solution(u0, t, L)\n",
@@ -1014,7 +1022,7 @@
         "    plt.title('Korteweg de Vries para un dominio periódico')\n",
         "    plt.show()\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1055,7 @@
           "height": 466
         },
         "id": "yp6DH2ripz6b",
-        "outputId": "5808aee3-15c9-4a01-953b-31e70492929a"
+        "outputId": "f24459b7-4175-4b31-ee44-69c0260af8ea"
       },
       "source": [
         "# Gráfica tipo superfices en 3D en evolución\n",
@@ -1072,7 +1080,7 @@
         "ax.set_title('Interacción de 2 ondas de la Ecuación de Korteweg de Vries con condiciones periódicas')\n",
         "plt.show()\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
