--- a/Actividad12.ipynb
+++ b/Actividad12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad12.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPi3c+coI08BhYzLoyp6seV",
+      "authorship_tag": "ABX9TyMdAcino2PSQAm74IhDtO4D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -329,7 +329,7 @@
         "En resumen, las expresiones anteriores se pueden expresar como \n",
         "\n",
         "\\begin{equation*}\n",
-        "- \\mathbf{U}_{i-1} + B\\mathbf{U}_{i} - \\mathbf{U}_{i-1} = h^2 \\mathbf{f}_i + \\mathbf{g}_i \n",
+        "- \\mathbf{U}_{i-1} + B\\mathbf{U}_{i} - \\mathbf{U}_{i+1} = h^2 \\mathbf{f}_i + \\mathbf{g}_i \n",
         "\\end{equation*}\n",
         "\n",
         "donde $B$ es la matriz tridiagonal $(M-2) \\times (M-2)$\n",
@@ -340,7 +340,7 @@
         "-1 & 4 & -1 & 0 & \\cdots & 0 \\\\\n",
         "0 & -1 & 4  & -1 & \\cdots & 0 \\\\\n",
         " &     &    &     & \\vdots &   \\\\\n",
-        "0 &  0  &  0 & 0 & 4 & -1 \\\\   \n",
+        "0 &  0  &  0 & 0 & -1 & 4 \\\\   \n",
         "\\end{bmatrix}\n",
         "\\end{equation*}\n",
         "\n",
@@ -424,7 +424,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 437
+          "height": 500
         },
         "id": "KvxwNzMDOqqG",
         "outputId": "18e91ad0-fcfe-4e93-e7dc-42282b142253"
