--- a/Actividad12.ipynb
+++ b/Actividad12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad12.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM3cLm4HiHHPah+zj4QSJxE",
+      "authorship_tag": "ABX9TyPqNJw1RQT7Jsr/UHbtAFje",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,6 +597,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xx9vuMkc6RcE"
+      },
+      "source": [
+        "**Ejercicio 1:**\n",
+        "\n",
+        "Resuelva la ecuación de Poisson sobre un cuadrado unitario, con condiciones de Dirichlet cero en las fronteras. \n",
+        "\n",
+        "\\begin{eqnarray*}\n",
+        "- \\nabla^2 u(x,y) & = & \\cos(2\\pi x) \\sin(3\\pi y) \\\\\n",
+        " \\mathrm{dadas \\ las \\ condiciones}& &  \\\\ \n",
+        "u(0,y) & = & 0 \\\\\n",
+        "u(1,y) & = & 0 \\\\\n",
+        "u(x,0) & = & 0 \\\\\n",
+        "u(x,1) & = & 0\n",
+        "\\end{eqnarray*}\n",
+        "\n",
+        "\n",
+        "**Ejercicio 2:**\n",
+        "\n",
+        "Resuelva la ecuación de Poisson sobre un cuadrado unitario, para encontrar los modos de vibración de una membrana: \n",
+        "\n",
+        "\\begin{eqnarray*}\n",
+        "- \\nabla^2 u(x,y) & = & \\sin(n\\pi x) \\sin(m\\pi y) \\\\\n",
+        " \\mathrm{dadas \\ las \\ condiciones}& &  \\\\ \n",
+        "u(0,y) & = & 0 \\\\\n",
+        "u(1,y) & = & 0 \\\\\n",
+        "u(x,0) & = & 0 \\\\\n",
+        "u(x,1) & = & 0\n",
+        "\\end{eqnarray*}\n",
+        "\n",
+        "para los siguientes casos: \n",
+        "* $n=1; m=1$, modo (1,1)\n",
+        "* $n=1; m=3$, modo (1,2)\n",
+        "* $n=2; m=3$, modo (2,2) \n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GmFjTuBBRIYG"
@@ -613,7 +653,7 @@
         "id": "MLoDBf7hBMeW"
       },
       "source": [
-        "### Ecuación de Poisson con condiciones de forntera tipo Neumann.\n",
+        "### Ecuación de Poisson con condiciones de frontera tipo Neumann.\n",
         "\n",
         "La Ecuación de Poisson puede también ser resuelta en un dominio $D=(0,a) \\times (0,b)$ con frontera $\\Gamma$ \n",
         "\n",
@@ -1115,6 +1155,28 @@
       "cell_type": "code",
       "metadata": {
         "id": "SbqlYqi8M1z4"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ra9Xl7vpwQDL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kaKYuE9lxR_R"
       },
       "source": [
         ""
