--- a/Actividad12.ipynb
+++ b/Actividad12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad12.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOsFKKGXCBw/UAEsTElZ1Fb",
+      "authorship_tag": "ABX9TyP15c1gLBV4ZTMp6q7OS4zf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1024,7 +1024,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 557
+          "height": 605
         },
         "id": "ppik4lu6gvJm",
         "outputId": "fa4c616c-005b-4f70-d953-f39eb3acbc93"
@@ -1140,6 +1140,48 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NT-R9OT8Ufr9"
+      },
+      "source": [
+        "**Ejercicio 3:**\n",
+        "\n",
+        "Resuelva la ecuación de Poisson sobre un cuadrado unitario \n",
+        "\n",
+        "\\begin{equation*}\n",
+        "- \\nabla^2 u(x,y)  =  - \\pi \\cos(\\pi x) - \\pi \\cos (\\pi y) \n",
+        "\\end{equation*}\n",
+        "\n",
+        "con condiciones de flujo cero en las fronteras (condiciones de frontera tipo Neumann). \n",
+        "\n",
+        "\\begin{eqnarray*}\n",
+        "u_x(0,y) & = & 0 \\\\\n",
+        "u_x(1,y) & = & 0 \\\\\n",
+        "u_y(x,0) & = & 0 \\\\\n",
+        "u_y(x,1) & = & 0\n",
+        "\\end{eqnarray*}\n",
+        "\n",
+        "**Ejercicio 4:**\n",
+        "\n",
+        "Resuelva la ecuación de Poisson sobre un cuadrado unitario \n",
+        "\n",
+        "\\begin{equation*}\n",
+        "- \\nabla^2 u(x,y)  =  - 2 \\pi^2 \\sin(\\pi (x+y)) \n",
+        "\\end{equation*}\n",
+        "\n",
+        "con condiciones de flujo cero en las fronteras (condiciones de frontera tipo Neumann). \n",
+        "\n",
+        "\\begin{eqnarray*}\n",
+        "u_x(0,y) & = & 0 \\\\\n",
+        "u_x(1,y) & = & 0 \\\\\n",
+        "u_y(x,0) & = & 0 \\\\\n",
+        "u_y(x,1) & = & 0\n",
+        "\\end{eqnarray*}\n",
+        "\n"
       ]
     },
     {
