--- a/Evaluación3.ipynb
+++ b/Evaluación3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Evaluación3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNyq1BQVlK+gAH02l8tG+WX",
+      "authorship_tag": "ABX9TyMBteASpMDhpmZXd40dFuH3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,6 +158,32 @@
       "cell_type": "code",
       "metadata": {
         "id": "v6GmGP4BN4F8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s9-_NUk8OKiI"
+      },
+      "source": [
+        "**NOTA:** \n",
+        "Describa en cada problema, lo que se realiza y comente los resultados de su simulación. Si hay alguna observación o comentario adicional que desee hacer, hágalo por favor.  \n",
+        "\n",
+        "Al finalizar la evaluación, por favor guarde su cuaderno de Jupyter llamado *Evaluación3* en su repositorio Github del curso y anote su avance. \n",
+        "\n",
+        "Gracias por participar. \n",
+        "¡Suerte!\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A5YRhZpwPWxp"
       },
       "source": [
         ""
