--- a/Evaluación3.ipynb
+++ b/Evaluación3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Evaluación3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMBteASpMDhpmZXd40dFuH3",
+      "authorship_tag": "ABX9TyM39DQkgizZNg4e4aTBo12t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
         "id": "Jyc47XJK1n8_"
       },
       "source": [
-        "### Tercera Evaluación de Física Computacional 1 (2021-1)\n",
+        "## Tercera Evaluación de Física Computacional 1 (2021-1)\n",
+        "\n",
+        "(3 de Mayo de 2021)\n",
         "\n",
         "La [Ecuación de Reacción-Difusión](https://en.wikipedia.org/wiki/Reaction–diffusion_system) en una dimensión está dada por la ecuación diferencial parcial\n",
         "\n",
